Sat Feb 18 09:34:42 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* lib/hashtable.c (hashtable_lookup_structure): Make return type
	  more precise.
	* lib/hashtable.h (hashtable_lookup_structure): Update prototype.

Thu Feb 16 10:55:05 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* Makefile.am (EXTRA_DIST): Add gnulib/m4/math_h.m4.

Tue Feb 14 12:18:50 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* Version: 2.6.1.
	* man/po4a/po/man-db-manpages.pot, po/man-db.pot, po/*.po: Update.

Thu Feb  9 08:44:09 GMT 2012  Colin Watson  <cjwatson@debian.org>

	Upgrade to Automake 1.11.3.

Thu Feb  9 08:16:12 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* src/lexgrog.l, src/zsoelim.l: Ensure that config.h is included at
	  the very top of the scanner, before any other headers.  This
	  should fix a compilation problem on Solaris reported by Clark J.
	  Wang.

Wed Feb  8 14:07:41 GMT 2012  Joe Hansen  <joedalton2@yahoo.dk>

	* po/da.po: Update from Translation Project.

Tue Feb  7 00:20:51 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* docs/INSTALL.quick: Document requirement for libiconv >= 1.8 on
	  non-glibc systems.

Mon Feb  6 23:00:33 GMT 2012  David Prévot  <david@tilapin.org>

	* man/po4a/po/fr.po, po/fr.po: Update from Translation Project.

Mon Feb  6 22:57:12 GMT 2012  Yuri Kozlov  <yuray@komyakino.ru>

	* man/po4a/po/ru.po, po/ru.po: Update from Translation Project.

Mon Feb  6 10:45:22 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* FAQ: New file.
	* Makefile.am (dist_noinst_DATA): Add FAQ.

Sun Feb  5 21:59:39 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* README (Notice to users of man-db version 2.2 or 2.2.1): Remove
	  this section.  The chances of anyone still running man-db versions
	  from 1995 seem remote in the extreme.

Sun Feb  5 21:57:49 GMT 2012  Colin Watson  <cjwatson@debian.org>

	* release.sh: Make sure that src/lexgrog.c and src/zsoelim.c are
	  fresh.

Sun Feb  5 15:36:52 GMT 2012  Colin Watson  <cjwatson@debian.org>
